--- a/recall/src/index.html
+++ b/recall/src/index.html
@@ -15,6 +15,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+  <div class="">
   <app-root>Loading...</app-root>
+  </div>
 </body>
 </html>
