--- a/recall/src/index.html
+++ b/recall/src/index.html
@@ -22,4 +22,12 @@
   <app-root>Loading...</app-root>
   </div>
 </body>
+<style>
+
+     .mat-tab-label{
+      padding: 10px;
+      display: block;
+      opacity: 1;
+     }
+</style>
 </html>
