--- a/recall/src/index.html
+++ b/recall/src/index.html
@@ -15,8 +15,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-  <script src=' https://code.jquery.com/jquery-3.3.1.js'  crossorigin='anonymous'>
-  </script></head>
+ 
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+ 
+  
+</head>
 <body>
   <div class="">
   <app-root>Loading...</app-root>
